--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<p>
-   <b>My intro to Git and colab</b>
+   My intro to Git and colab
 </p>
 	
     <script type="text/javascript" src="./script.js">
